--- a/app/static/partials/details.html
+++ b/app/static/partials/details.html
@@ -14,8 +14,8 @@
         </div>
         <div class="mdetails-top-right">
             <div class='m-entity-name'>
-            <a ng-if='currentEntity.url' ng-href='{{currentEntity.url}}' target='_blank'><h2>{{currentEntity.name}}</h2></a>
-            <a ng-if='!currentEntity.url' ng-href='https://www.bing.com/search?q={{currentEntity.name}}' target='_blank'><h2>{{currentEntity.name}}</h2></a>
+            <h2><a ng-if='currentEntity.url' ng-href='{{currentEntity.url}}' target='_blank'>{{currentEntity.name}}</a></h2>
+            <h2><a ng-if='!currentEntity.url' ng-href='https://www.bing.com/search?q={{currentEntity.name}}' target='_blank'>{{currentEntity.name}}</a></h2>
             </div>
             <div>
             <span ng-if='currentEntity.locations.length'>
